--- a/package.json
+++ b/package.json
@@ -20,6 +20,20 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "@angular2-material/button": "^2.0.0-alpha.8-2",
+    "@angular2-material/card": "^2.0.0-alpha.8-2",
+    "@angular2-material/checkbox": "^2.0.0-alpha.8-2",
+    "@angular2-material/core": "^2.0.0-alpha.8-2",
+    "@angular2-material/icon": "^2.0.0-alpha.8-2",
+    "@angular2-material/input": "^2.0.0-alpha.8-2",
+    "@angular2-material/list": "^2.0.0-alpha.8-2",
+    "@angular2-material/grid-list": "^2.0.0-alpha.8-2",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.8-2",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.8-2",
+    "@angular2-material/radio": "^2.0.0-alpha.8-2",
+    "@angular2-material/sidenav": "^2.0.0-alpha.8-2",
+    "@angular2-material/tabs": "^2.0.0-alpha.8-2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.8-2",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -40,7 +54,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
+    "tslint": "^4.1.1",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
